+
This new package and those new components are the first part of our work to make Sirius Web more reusable.
- https://github.com/eclipse-sirius/sirius-web/issues/2615[#2615] [diagram] `useDropNode().dropFeedbackStyleProvider` has been removed.
Use `useDropNodeStyle(node.id)` instead to get the feedback of the drop feedback.

=== Dependency update

- Remove the dependency to elk.js


=== Bug fixes

- https://github.com/eclipse-sirius/sirius-web/issues/2360[#2360] [form] Fix an issue that prevents creation of new object on some containment reference with the reference widget.
- https://github.com/eclipse-sirius/sirius-web/issues/2456[#2456] [form] Fix an issue that prevents creation of new object on mono valued and containment reference when a value is already set with the reference widget.
- https://github.com/eclipse-sirius/sirius-web/issues/2269[#2269] [view] Fix an issue where it was possible to create a DiagramDescription or a FormDescription as a root object of a resource.
- https://github.com/eclipse-sirius/sirius-web/issues/2470[#2470] [form] Fix an issue that prevents the removal of a contained reference from the reference widget.
- https://github.com/eclipse-sirius/sirius-web/issues/2469[#2469] [form] Fix an issue that occurs when navigating from a reference widget to a filtered item in the explorer.
- https://github.com/eclipse-sirius/sirius-web/issues/2466[#2466] [form] Fix an issue that prevents the selection of an ancestor in the reference widget.
- https://github.com/eclipse-sirius/sirius-web/issues/2456[#2456] [form] Add a more meaningful message when trying to add a new value to a mono reference not empty.
- https://github.com/eclipse-sirius/sirius-web/issues/2487[#2487] [form] Fix an issue that prevents an error when using values not in the option list in a reference widget modal transfert.